fixed the image overflow

--- a/src/App.css
+++ b/src/App.css
@@ -803,11 +803,6 @@ footer {
   
 } 
 
-.custom-container {
-  height: 30% !important;
-}
-
-
 
 .Contactline {
   text-align: center;
